added two metasploit template
Windows service template and DLL with gdiplus exports (deprecated). Minor bugfixes in project configurations

--- a/generic/dll/meterpreter_dll_template/meterpreter_dll_template.vcxproj
+++ b/generic/dll/meterpreter_dll_template/meterpreter_dll_template.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{0650699B-B709-4F94-8E30-C37C31952556}</ProjectGuid>
     <RootNamespace>meterpreterdlltemplate</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>meterpreter_dll_template</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
