minor project config changes

--- a/x64/exe/meterpreter_x64_asm/meterpreter_x64_asm.vcxproj
+++ b/x64/exe/meterpreter_x64_asm/meterpreter_x64_asm.vcxproj
@@ -90,9 +90,10 @@
       <EntryPointSymbol>main</EntryPointSymbol>
       <AdditionalDependencies>kernel32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <EnableUAC>false</EnableUAC>
-      <RandomizedBaseAddress>false</RandomizedBaseAddress>
-      <DataExecutionPrevention>false</DataExecutionPrevention>
+      <RandomizedBaseAddress>true</RandomizedBaseAddress>
+      <DataExecutionPrevention>true</DataExecutionPrevention>
       <LinkErrorReporting>NoErrorReport</LinkErrorReporting>
+      <IgnoreAllDefaultLibraries>true</IgnoreAllDefaultLibraries>
     </Link>
     <PostBuildEvent>
       <Command>echo "Copy $(TargetName)$(TargetExt) file to release folder"
