--- a/x86/exe/meterpreter_x86_asm/meterpreter_x86_asm.vcxproj
+++ b/x86/exe/meterpreter_x86_asm/meterpreter_x86_asm.vcxproj
@@ -51,6 +51,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(SolutionDir)out\$(PlatformShortName)\$(Configuration)\</OutDir>
+    <GenerateManifest>false</GenerateManifest>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -84,7 +85,11 @@ gcc.exe %(FullPath) -o $(OutDir)$(TargetName)$(TargetExt) -nostdlib -lkernel32</
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
+      <GenerateDebugInformation>false</GenerateDebugInformation>
+      <IgnoreAllDefaultLibraries>true</IgnoreAllDefaultLibraries>
+      <EnableUAC>false</EnableUAC>
+      <EntryPointSymbol>main</EntryPointSymbol>
+      <LinkErrorReporting>NoErrorReport</LinkErrorReporting>
     </Link>
     <CustomBuild>
       <Command>cd C:\mingw-w64\i686-8.1.0-posix-dwarf-rt_v6-rev0\mingw32\bin
